# absolute_cpp_v2

./: .gitignore  README.md  common.hpp  create_dirs.sh  gtest_setup.sh  mingw.h  msvcrtver.h  unistd.h  w32api.h
chapter1/exercises/: ex1.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp
chapter1/projects/: p1.cpp  p10.cpp  p11.cpp  p2.cpp  p3.cpp  p4.cpp  p5.cpp  p6.cpp  p7.cpp  p8.cpp  p9.cpp
chapter10/exercises/: CallByParameters.cpp  MyClass.cpp  PFArray.cpp  answers_to_questions.cpp  classPointer.cpp  dynamicArray.cpp  dynamicArray2.cpp  functionsReturnArray.cpp  pointers.cpp  two_dimensional_array.cpp
chapter11/exercises/: DTimeNamespace.cpp  DigitalTime.cpp  DigitalTime.hpp  HelloWorldNamespace.cpp  NS1.cpp  NS1.h  NS2.cpp  NS2.h  NS_Main.cpp  dtime.cpp  dtime.h  dtime_main.cpp  namespacesExercises.cpp  nestedNamespaces.cpp  simpleClass.cpp  simpleClass.h  simpleClassMain.cpp  simpleNameSpace.cpp
chapter12/exercises/: check_eof.cpp  check_valid_file.cpp  copy_story_txt.cpp  datafile.txt  edit_text_file.cpp  file_append.cpp  format_output.cpp  infile.txt  messy.txt  neat.txt  outfile.txt  output.txt  output_list.txt  random_file_access.cpp  read_fie_halfway.cpp  read_list.cpp  self_test.cpp  self_test_part_2.cpp  self_test_part_3.cpp  simple_file_io.cpp  story_copy.txt  stuff.txt  stuff2.txt
chapter13/exercises/: binary_search.cpp  cheers_recursion.cpp  mystery.cpp  power.cpp  rose.cpp  squares.cpp  (+2 more)
test/TestCppUnitTest/: CMakeLists.txt  MyTest.cpp  TestCppUnitTest.sln  TestCppUnitTest.vcxproj
(+465 files in other folders)
